# u6a

./: .codecov.yml  .drone.yml  .gitattributes  .gitignore  .travis.yml  INSTALL  Makefile.am  README.md  codecov.yml  configure.ac
man/: Makefile.am  u6a.1  u6ac.1
src/: Makefile.am  codegen.c  codegen.h  common.h  defs.h  dump.c  dump.h  lexer.c  lexer.h  logging.c  logging.h  mnemonic.c  mnemonic.h  parser.c  parser.h  runtime.c  runtime.h  u6a.c  u6ac.c  vm_defs.h  vm_pool.c  vm_pool.h  vm_stack.c  vm_stack.h
tests/: init.exp  u6a_run
tests/default/: cat.exp  dump.exp  quines.exp  square.exp
